Try a new example by using ES6 and babel

--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
   <script src="http://fb.me/react-0.13.3.js"></script>
 </head>
 <body>
-<div id="app"></div><!-- ←ここに埋め込まれる -->
+<div id="app"></div>
 
-<!-- 以下、Reactのプログラム -->
-<!-- (jsxを使っているのでtext/jsxと書く) -->
-<script src="lib/test.js">
-</script>
+<script src="dist/bundle.js"></script>
 </body>
 </html>
