--- a/public/index.html
+++ b/public/index.html
@@ -1,69 +1,98 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Welcome to Firebase Hosting</title>
-    <style media="screen">
-      body {
-        font-family: Roboto, Arial, sans-serif;
-        background: #ECEFF1;
-        color: rgba(0,0,0,0.87);
-      }
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"®>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      a {
-        color: rgb(3,155,229);
-      }
+  <script src="http://fb.me/react-0.13.3.js"></script>
+  <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+  <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
 
-      #message {
-        max-width: 400px;
-        margin: 40px auto;
-        box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2),0 1px 1px 0 rgba(0,0,0,0.14),0 2px 1px -1px rgba(0,0,0,0.12);
-        border-radius: 2px;
-        background: white;
-        padding: 16px 24px;
-      }
+  <title>Chat Tool</title>
 
-      #message h1 {
-        font-size: 22px;
-        font-weight: 500;
-        text-align: center;
-        margin: 0 0 16px;
-      }
+  <!-- Bootstrap -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
-      #message p {
-        font-weight: 300;
-        line-height: 150%;
-      }
+</head>
 
-      #message ul {
-        list-style: none;
-        margin: 16px 0 0;
-        padding: 0;
-        text-align: center;
-      }
+<body>
+<nav class="navbar navbar-fluid">
 
-      #message li a {
-        display: inline-block;
-        padding: 8px;
-        text-transform: uppercase;
-        text-decoration: none;
-        font-weight: 500;
-        background: rgb(3,155,229);
-        color: white;
-        border: 1px solid rgb(3,155,229);
-        border-radius: 3px;
-        font-size: 14px;
-        box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
-      }
-    </style>
-  </head>
-  <body>
-    <div id="message">
-      <h1>Welcome to Firebase Hosting</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <ul>
-        <li><a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a></li>
+  <!--ナビゲーション-->
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button class="navbar-toggle" data-toggle="collapse" data-target="#mainNav">
+        <span class="sr-only">ナビゲーション</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a href="#" class="navbar-brand">ChatTool</a>
+    </div>
+
+    <div class="collapse navbar-collapse" id="mainNav">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="" class="dropdown-toggle" data-toggle="dropdown">
+            連絡先を追加 <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a href="#">IDで追加</a></li>
+            <li><a href="#">メールアドレスで追加</a></li>
+          </ul>
+        </li>
       </ul>
     </div>
-  </body>
+  </div>
+</nav>
+
+<div class="container-fluid">
+  <div class="row">
+    <!--画面左（コンタクトリスト）-->
+    <div class="col-xs-4" style="background:#CCC;height:250px;">
+
+    </div>
+
+    <!--画面右（チャット画面）-->
+    <div class="col-xs-8" style="background:#EEE;height:300px;">
+      <input id="name" placeholder="名前" />
+      <input id="message" placeholder="メッセージ" />
+      <button id="send">投稿</button>
+
+      <!--チャット画面-->
+      <ul id="messages"></ul>
+
+
+    </div>
+  </div>
+</div>
+
+<script src="scripts/main.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<div id="app"></div>
+
+<!--<script src="../dist/bundle.js"></script>-->
+</div>
+
+<script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyB4OQXeOmidR-oKw7XlYMjtNV2TxU-Ects",
+    authDomain: "chattool-5a67b.firebaseapp.com",
+    databaseURL: "https://chattool-5a67b.firebaseio.com",
+    storageBucket: "chattool-5a67b.appspot.com",
+  };
+  firebase.initializeApp(config);
+</script>
+
+</body>
 </html>
+
