--- a/public/index.html
+++ b/public/index.html
@@ -23,38 +23,71 @@
 </head>
 
 <body>
-<nav class="navbar navbar-fluid">
 
-  <!--ナビゲーション-->
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button class="navbar-toggle" data-toggle="collapse" data-target="#mainNav">
-        <span class="sr-only">ナビゲーション</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a href="#" class="navbar-brand">ChatTool</a>
+<!--モーダルダイアログ（ログイン画面）-->
+<div class="modal fade" id="loginModal" >
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button class="close" data-dismiss="modal" >×</button>
+        <h5 class="modal-title">ChatToolにログイン</h5>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div id="errorMsg" class="form-group has-error hidden">
+            <span class="help-block">メールアドレスかパスワードが正しくありません。</span>
+          </div>
+          <div class="form-group">
+            <label for="inputMail">メールアドレス</label>
+            <input id="inputMail" class="form-control" placeholder="メールアドレス" type="mail">
+          </div>
+          <div class="form-group">
+            <label for="inputPassword">パスワード</label>
+            <input id="inputPassword" class="form-control" placeholder="パスワード" type="password">
+          </div>
+          <!--<p class="text-right"><a href="#">ログインできない方はこちら</a></p>-->
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
+        <button id="loginButton" type="button" class="btn btn-primary">ログイン</button>
+      </div>
     </div>
+  </div>
+</div>
 
-    <div class="collapse navbar-collapse" id="mainNav">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="" class="dropdown-toggle" data-toggle="dropdown">
-            連絡先を追加 <span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu">
-            <li><a href="#">IDで追加</a></li>
-            <li><a href="#">メールアドレスで追加</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
+<!--ナビゲーションバー-->
+<nav class="navbar navbar-default">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainNav">
+      <span class="sr-only">ナビゲーション</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a href="#" class="navbar-brand">ChatTool</a>
+  </div>
+
+  <div class="collapse navbar-collapse" id="mainNav">
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#" data-toggle="modal" data-target="#loginModal">ログイン</a></li>
+      <li><a href="#" data-toggle="modal" data-target="#registerModal">新規登録</a></li>
+
+      <li class="dropdown">
+        <a href="" class="dropdown-toggle" data-toggle="dropdown">
+          連絡先を追加 <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+          <li><a href="#">IDで追加</a></li>
+          <li><a href="#">メールアドレスで追加</a></li>
+        </ul>
+      </li>
+    </ul>
   </div>
 </nav>
 
-
 <div class="container-fluid">
+  <!--メイン画面-->
   <div class="row">
     <!--画面左（コンタクトリスト）-->
     <div class="col-xs-4" style="background:#CCC;height:250px;">
@@ -100,6 +133,7 @@
   firebase.initializeApp(config);
 </script>
 
+このアプリは Apache License, Version 2.0 のライセンス(http://www.apache.org/licenses/LICENSE-2.0 )で配布されている成果物を含んでいます。
 </body>
 </html>
 
