--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
 <body>
-<div id="root"></div>
-<script src="./dist/bundle.js"></script>
-<script>main.render();</script>
+<div id="app"></div>
+<script src="dist/bundle.js"></script>
 </body>
 </html>
