Test using 'Fukidashi' with CSS

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>ChatTool</title>
 
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/chat.css">
 </head>
 <body>
 <div id="app"></div>
