--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/chat.css">
+    <link rel="stylesheet" href="./css/main.css">
+
 </head>
 <body>
 <div id="app"></div>
