Add a new button to send a picture for future improvements.

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>ChatTool</title>
 
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/chat.css">
+    <link rel="stylesheet" href="css/main.css">
 
 </head>
 <body>
